# AzureDeepStreamAccelerator

./: .gitattributes  .gitignore  README.md  SUPPORT.md
business-logic-container/: Dockerfile.amd64  Dockerfile.arm64  main.py  requirements.txt
cli/: README.md  deepstreamcli.py  setup.py
cli/tests/: Dockerfile
documentation/: how-to-addmultiplevideos.md  how-to-configcontroller.md  how-to-dewarpvideo.md  how-to-includeazuremontior.md  how-to-migratefromdeepstream.md  how-to-modifybusinesslogic.md  how-to-usecommandlinetool.md  how-to-usewebappwidget.md  message-schema.md  quickstart-readme.md  troubleshooting.md  tutorial-byom-path.md  tutorial-getstarted-path.md  tutorial-prebuiltmodel-path.md
ds-ai-pipeline/src/lighttrack_source/lightdet/: CMakeLists.txt  lightdet.cpp
ds-ai-pipeline/src/lighttrack_source/lightmot/: CMakeLists.txt
ds-ai-pipeline/src/lighttrack_source/lightmot/include/: config.h  data_type.h  defines.h  kalman_filter.h  lapjv.h  mot_context.h  tracker.h  tracklet.h
ds-ai-pipeline/src/lighttrack_source/lightmot/src/: config.cpp  ds_mot_api.cpp  kalman_filter.cpp  lapjv.cpp  mot_context.cpp  tracker.cpp  tracklet.cpp
eai-installer/: eai-installer_1.2.2_arm64.run
get-started-demo/: Manufacturing Use Case Hands On Lab.ipynb  README.md  requirements.txt
parser-examples/: readme.md
rtsp-simulator/: Dockerfile  DynamicRTSPServer.patch  README.md
video-uploader/: .dockerignore  README.md  deployment.debug.template.json  deployment.template.json
widget/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+151 files in other folders)
